# rust-weechat

./: .gitignore  Cargo.toml  LICENSE  build.rs
sample/: Cargo.toml
sample/src/: lib.rs
src/: bindings.rs  init.rs  lib.rs  plugin.rs  weechat.rs
src/ffi/: consts.rs  infos.rs  init.rs  mod.rs  structs.rs
weechat-macro/: Cargo.toml
weechat-macro/src/: lib.rs
weechat-rs/: Cargo.toml
weechat-rs/src/: bar.rs  buffer.rs  completion.rs  config.rs  config_options.rs  hooks.rs  infolist.rs  lib.rs  plugin.rs  weechat.rs  wrapper.h
weechat-sys/: Cargo.toml  build.rs
weechat-sys/src/: lib.rs
