[package]
name = "weechat-rust-sample-plugin"
version = "0.1.0"
authors = [
    "KokaKiwi <kokakiwi@kokakiwi.net>",
    "Damir Jelić <poljar@termina.org.uk>"
]
edition = "2018"

[lib]
name = "weechat_rust_sample_plugin"
crate-type = ["dylib"]

[dependencies]
libc = "*"
weechat = { path = "../weechat-rs" }
weechat-sys = { path = "../weechat-sys" }
weechat-macro = { path = "../weechat-macro" }
