[package]
name = "weechat"
version = "0.1.0"
authors = [
    "KokaKiwi <kokakiwi@kokakiwi.net>",
    "Damir Jelić <poljar@termina.org.uk>"
]
repository = "https://github.com/poljar/rust-weechat/"
homepage = "https://github.com/poljar/rust-weechat/"

description = "Weechat API bindings for Rust"
license = "MIT"

[dependencies]
libc = "0.2.48"
weechat-sys = "0.1.0"
