[package]
name = "weechat-sys"
version = "0.1.0"
authors = [
    "KokaKiwi <kokakiwi@kokakiwi.net>",
    "Damir Jelić <poljar@termina.org.uk>"
]
description = "Rust low level API bindings for Weechat"
license = "MIT"
edition = "2018"

[build-dependencies]
bindgen = "0.47.1"

[dependencies]
libc = "0.2.48"
